--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
         <div class="best-container">0</div>
       </div>
     </div>
-
+    <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-zDCfSecrso9pFtom" 
+ data-ad-width   = "320" 
+ data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
       <a class="restart-button">New Game</a>
