--- a/index.html
+++ b/index.html
@@ -79,6 +79,11 @@
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
+    <ins class="kakao_ad_area" style="display:none;" 
+ data-ad-unit    = "DAN-toMfcgQU2aqv23ZZ" 
+ data-ad-width   = "250" 
+ data-ad-height  = "250"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <hr>
     <ins class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-7ecBVcYktuX3iJRq" 
