--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="utf-8">
   <title>2040</title>
-
+  <style>
+	  #ad1{
+	  margin: 0 auto;
+	  width:300px;
+	  height:300px;}
+  </style>
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
   <link rel="apple-touch-icon" href="meta/apple-touch-icon.png">
@@ -79,13 +84,9 @@
     <p class="game-explanation">
       <strong class="important">How to play:</strong> Use your <strong>arrow keys</strong> to move the tiles. When two tiles with the same number touch, they <strong>merge into one!</strong>
     </p>
-    <ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-toMfcgQU2aqv23ZZ" 
- data-ad-width   = "250" 
- data-ad-height  = "250"></ins> 
-<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
+   
     <hr>
-    <ins class="kakao_ad_area" style="display:none;" 
+    <ins id ="ad1" class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-7ecBVcYktuX3iJRq" 
  data-ad-width   = "250" 
  data-ad-height  = "250"></ins> 
