--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
   <meta charset="utf-8">
   <title>2040</title>
   <style>
-	  #ad1{
+	  .ad1{
 	  margin: 0 auto;
-	  width:300px;
-	  height:300px;}
+	  }
+	  
   </style>
   <link href="style/main.css" rel="stylesheet" type="text/css">
   <link rel="shortcut icon" href="favicon.ico">
@@ -86,7 +86,7 @@
     </p>
    
     <hr>
-    <ins id ="ad1" class="kakao_ad_area" style="display:none;" 
+    <ins class="ad1" class="kakao_ad_area" style="display:none;" 
  data-ad-unit    = "DAN-7ecBVcYktuX3iJRq" 
  data-ad-width   = "250" 
  data-ad-height  = "250"></ins> 
