--- a/index.html
+++ b/index.html
@@ -31,9 +31,10 @@
       </div>
     </div>
     <ins class="kakao_ad_area" style="display:none;" 
- data-ad-unit    = "DAN-zDCfSecrso9pFtom" 
+ data-ad-unit    = "DAN-CoMTUkgqVByD7iCh" 
  data-ad-width   = "320" 
  data-ad-height  = "100"></ins> 
+<script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
 <script type="text/javascript" src="//t1.daumcdn.net/kas/static/ba.min.js" async></script>
     <div class="above-game">
       <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
